--- a/config.yaml
+++ b/config.yaml
@@ -37,7 +37,7 @@ params:
         readingTime: true
         license:
             enabled: true
-            default: Licensed under CC BY-NC-SA 4.0
+            default: ##Add license information here
 
     widgets:
         enabled:
