--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-baseURL: 'https://natashad.netlify.app'
+baseURL: 'https://natashad.me/'
 languageCode: en-us
 title: Natasha Dedich
 theme: hugo-theme-stack
