--- a/config.yaml
+++ b/config.yaml
@@ -3,6 +3,7 @@ languageCode: en-us
 title: Natasha Dedich
 theme: hugo-theme-stack
 DefaultContentLanguage: en
+googleAnalytics: G-M8QYZE4E31
 
 permalinks:
     post: /p/:slug/
